--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "readline": "^1.3.0",
     "wait-on": "^7.0.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
@@ -32,18 +33,15 @@
   },
   "build": {
     "extends": null,
-    "appId": "Master Freeze Generator",
-    "productName": "Master Freeze Generator",
+    "appId": "Fasta Parser",
+    "productName": "Fasta Parser",
     "files": [
       "dist/**/*",
       "build/**/*",
       "node_modules/**/*",
       "package.json"
     ],
-    "icon": "sbs logo",
-    "directories": {
-      "buildResources": "assets"
-    }
+    "icon": "DNA Sequencer"
   },
   "eslintConfig": {
     "extends": [
@@ -65,6 +63,6 @@
   },
   "devDependencies": {
     "electron": "^25.0.1",
-    "electron-is-dev": "^2.0.0"
+    "electron-builder": "^23.6.0"
   }
 }
